@@ -1,44 +1,9 @@
 [buildout]
 extends = versions/versions.cfg
-parts = lxml test selenium
+parts = lxml
+        test
 package = zeit.addcentral
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = ${buildout:package}
-defaults = ['-v', '-c']
-
-### Selenium tests
-
-[application]
-recipe = zc.zope3recipes:application
-servers = zserver
-eggs =
-   ${test:eggs}
-   zope.app.server
-   zc.selenium
-site.zcml =
-  <include package="${buildout:package}" file="ftesting.zcml" />
-  <include package="zeit.cms" file="selenium.zcml" />
-  <include package="zeit.addcentral.tests" file="selenium.zcml" />
-
-[demo]
-recipe = zc.zope3recipes:instance
-application = application
-zope.conf =
-    <zodb>
-      <demostorage>
-      </demostorage>
-    </zodb>
-    <server http0>
-      address 39857
-      type WSGI-HTTP
-    </server>
-
-[selenium]
-recipe = zc.recipe.egg:scripts
-eggs = ${application:eggs}
-scripts = selenium
-entry-points = selenium=zc.selenium.selenium:main
-initialization =
-    sys.argv[1:1] = ['${demo:run-directory}/zope.conf', '-r']
