@@ -52,3 +52,34 @@ class ContentAdderTest(zeit.addcentral.testing.FunctionalTestCase):
             '@@zeit.content.image.imagegroup.Add'
             '?form.ressort=cb61e5a1d8e82f77f50ce4f86a114006',
             adder())
+
+
+class JavascriptTest(zeit.cms.testing.SeleniumTestCase):
+
+    layer = zeit.addcentral.testing.selenium_layer
+    skin = 'vivi'
+
+    def test_adding(self):
+        s = self.selenium
+        self.open('/')
+
+        # provoke validation error
+        s.waitForElementPresent('sidebar.form.type_')
+        s.select('sidebar.form.type_', 'Image Group')
+        s.click('sidebar.form.actions.add')
+        s.waitForElementPresent('xpath=//ul[@class="errors"]')
+
+        # successful submit
+        s.select('sidebar.form.ressort', 'International')
+        s.waitForElementPresent('xpath=//option[text() = "Meinung"]')
+        s.select('sidebar.form.sub_ressort', 'Meinung')
+        s.clickAndWait('sidebar.form.actions.add')
+        s.verifyLocation('*/international/meinung/*-*/@@zeit.content.image.imagegroup.Add*')
+
+        # values should be remembered in the session
+        s.verifySelectedLabel('sidebar.form.ressort', 'International')
+
+        # but selecting something else should take preference
+        s.select('sidebar.form.type_', 'Folder')
+        s.clickAndWait('sidebar.form.actions.add')
+        s.verifyLocation('*/international/meinung/*-*/@@zeit.cms.repository.folder.Add*')
